--- a/gamedata_soc/config/creatures/m_stalker.ltx
+++ b/gamedata_soc/config/creatures/m_stalker.ltx
@@ -59,33 +59,33 @@ cr_turn_left_0				=	1,	  0.2,	    0.1,   0.65,     0.1
 cr_turn_right_0				=	1,	  0.2,	    0.1,   0.65,     0.1
 
 [stalker_vision_free]
-min_view_distance 			= 0.4				; коэффициент, который множится на eye_range, в зависимости от угла
-max_view_distance 			= 0.8				; коэффициент, который множится на eye_range, в зависимости от угла
-visibility_threshold	 	= 150.0				; значение, при достижении суммой которого объект считается видимым
+min_view_distance 			= 0.4				; пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ, пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ eye_range, пїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅ
+max_view_distance 			= 0.8				; пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ, пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ eye_range, пїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅ
+visibility_threshold	 	= 150.0				; пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ, пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ
 always_visible_distance 	= 0.1
 time_quant					= 0.005
-decrease_value				= 0.1				; значение, на которое уменьшается вес, если объект попал в фрустум, но отсёкся по каким-то причинам
+decrease_value				= 0.1				; пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ, пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ, пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ пїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ, пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅ-пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ
 velocity_factor		     	= 0.5
-luminocity_factor			= 0.5				; фактор освещения (только для Актёра)
+luminocity_factor			= 0.5				; пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ (пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ)
 transparency_threshold	 	= 0.4				; 0.75
 
 [stalker_vision_danger]
-min_view_distance   		= 0.7				; коэффициент, который множится на eye_range, в зависимости от угла
-max_view_distance	 		= 1.0				; коэффициент, который множится на eye_range, в зависимости от угла
-visibility_threshold	 	= 120.0				; значение, при достижении суммой которого объект считается видимым
+min_view_distance   		= 0.7				; пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ, пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ eye_range, пїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅ
+max_view_distance	 		= 1.0				; пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ, пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ eye_range, пїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅ
+visibility_threshold	 	= 120.0				; пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ, пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ
 always_visible_distance 	= 0.2
 time_quant					= 0.001
-decrease_value				= 0.01				; значение, на которое уменьшается вес, если объект попал в фрустум, но отсёкся по каким-то причинам
+decrease_value				= 0.01				; пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ, пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ, пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ пїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ, пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅ-пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ
 velocity_factor		     	= 0.5
-luminocity_factor			= 0.5 				; фактор освещения (только для Актёра)
+luminocity_factor			= 0.5 				; пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ (пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ)
 transparency_threshold	 	= 0.4				; 0.25
 
 [stalker_sound_perceive]
-	weapon					= 2; 0.75; 10 коэффициент усиления приоритета\силы звука
-	item					= 0.5; коэффициент усиления приоритета\силы звука
-	npc						= 1;1;2 коэффициент усиления приоритета\силы звука
-	anomaly					= 0.0; коэффициент усиления приоритета\силы звука
-	world					= 0.2; коэффициент усиления приоритета\силы звука
+	weapon					= 2; 0.75; 10 пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ\пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ
+	item					= 0.5; пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ\пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ
+	npc						= 1;1;2 пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ\пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ
+	anomaly					= 0.0; пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ\пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ
+	world					= 0.2; пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ\пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ
 
 [stalker_damage]
 default						= 1.0, -1, 1.0
@@ -207,7 +207,7 @@ bip01_r_toe0	 	 		= 0.0, -1, 0.2
 	leg_right				= critical_wound_leg_right_section
   
 [stalker_immunities]
-burn_immunity 				= 1.0				;коэффициенты иммунитета 
+burn_immunity 				= 1.0				;пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ 
 strike_immunity 			= 1.0
 shock_immunity 				= 1.0
 wound_immunity				= 1.0
@@ -219,18 +219,18 @@ fire_wound_immunity  		= 1.0
 wound_2_immunity  			= 1.0
 
 [stalker_condition]
-satiety_v					= 0.00001				;скорость уменьшения сытости со временем
-radiation_v					= 0.0001				;скорость уменьшения радиации
-satiety_power_v				= 0.0005				;увеличение силы при уменьшении сытости 
-satiety_health_v			= 0.0 ;0.0001				;увеличение здоровья при уменьшении сытости 
-satiety_critical			= 0.0					;критическое значения сытости (в процентах от 0..1) когда здоровье начианает уменьшаться
-radiation_health_v			= 0.001					;уменьшение здоровья при воздействии радиации
-morale_v					= 0.0001				;скорость восстановления морали 						
-health_hit_part				= 1.0					;процент хита, уходящий на отнимание здоровья
-power_hit_part				= 0.0					;процент хита, уходящий на отнимание силы
-psy_health_v				= 0.01					; скорость восстановления psy-здоровья
+satiety_v					= 0.00001				;пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ
+radiation_v					= 0.0001				;пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ
+satiety_power_v				= 0.0005				;пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ 
+satiety_health_v			= 0.0 ;0.0001				;пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ 
+satiety_critical			= 0.0					;пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ (пїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ 0..1) пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ
+radiation_health_v			= 0.001					;пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ
+morale_v					= 0.0001				;пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ 						
+health_hit_part				= 1.0					;пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ, пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ
+power_hit_part				= 0.0					;пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ, пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ
+psy_health_v				= 0.01					; пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ psy-пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ
 
-sleep_health				= 1.0					;коэффициенты скоростей изменения параметров во время сна
+sleep_health				= 1.0					;пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ
 sleep_power					= 1.0
 sleep_satiety				= 1.0
 sleep_radiation 			= 1.0
@@ -240,27 +240,27 @@ sleep_psy_health			= 1.0
 use_limping_state			= off
 limping_threshold			= 0.5
 
-;открытые раны
-bleeding_v					= 0.0						;потеря крови при номинальной ране в секунду
-wound_incarnation_v			= 0.001					;крутизна кривой заживления (какой процент раны останется после заживления в игровую секунду)
+;пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ
+bleeding_v					= 0.0						;пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ
+wound_incarnation_v			= 0.001					;пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ (пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ)
 min_wound_size				= 0.01
 
 [stalker_terrain]
 	255,000,255,255
-	008,001,255,255 ;Разрешено ходить по опасным местам на баре
-	012,001,255,255 ;Разрешено ходить по опасным местам на Милитари
+	008,001,255,255 ;пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅ
+	012,001,255,255 ;пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ
 	
 [stalker_dolg_terrain]
 	255,000,255,255
-	008,001,255,255 ;Разрешено ходить по опасным местам на баре
+	008,001,255,255 ;пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅ
 
 [stalker_freedom_terrain]
 	255,000,255,255
-	012,001,255,255 ;Разрешено ходить по опасным местам на Милитари
+	012,001,255,255 ;пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ
 
 [stalker_ecolog_terrain]
 	255,000,255,255
-	008,001,255,255 ;Разрешено ходить по опасным местам на баре
+	008,001,255,255 ;пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅ
 
 [stalker_bandit_terrain]
 	255,000,255,255
@@ -273,7 +273,7 @@ min_wound_size				= 0.01
 
 [stalker_zombied_terrain]
 	255,000,255,255
-	010,001,255,255	;Разрешено ходить по опасным местам на янтаре
+	010,001,255,255	;пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ
 
 
 	
@@ -314,7 +314,7 @@ min_wound_size				= 0.01
 
 [stalker]:common_ph_friction_params_on_npc_death
 class							= AI_STL_S						; Class identifier
-unreal_proxy					= /Game/Base/Blueprints/BP_Stalker.BP_Stalker_C
+unreal_proxy					= /Game/BaseNoGit/Blueprints/BP_Stalker.BP_Stalker_C
 can_select_items				= on
 
 ;---EVALUATION FUNCTIONS----------------------------------------------
@@ -332,7 +332,7 @@ use_single_item_rule			= on
 ;---GAME--------------------------------------------------------------
 $prefetch 						= 32							
 cform							= skeleton						; collision class
-;биолог вид существа
+;пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ
 species							= human
 
 ;---MATERIAL----------------------------------------------------------
@@ -363,7 +363,7 @@ search_speed					= 0.5					; option for ALife Simulator
 going_item_detect_probability	= 0.1					; option for ALife Simulator
 search_item_detect_probability	= 0.9					; option for ALife Simulator
 max_item_mass					= 1000.0				; option for ALife Simulator
-inv_max_weight					= 1000.0				; Допустимый вес инвентори
+inv_max_weight					= 1000.0				; пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ
 MaxHealthValue					= 100					; option for ALife Simulator, range [0..200]
 smart_terrain_choose_interval	= 00:15:00
 
@@ -388,8 +388,8 @@ vision_danger_section			= stalker_vision_danger
 vision_free_section				= stalker_vision_free
 eye_fov							= 110;120
 eye_range						= 80	
-far_plane_factor				= 1.0				; фактор дальности тумана
-fog_density_factor				= 0.05				; фактор плотности тумана
+far_plane_factor				= 1.0				; пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ
+fog_density_factor				= 0.05				; пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ
 
 ;---MEMORY------------------------------------------------------------
 DynamicObjectsCount				= 32
@@ -440,8 +440,8 @@ foot_bones						= stalker_foot_bones
 movement_speeds					= stalker_movement_speeds;
 
 ;---SIGHT-------------------------------------------------------------------------
-max_left_torso_angle			= 45 ; максимальный угол поворота налево без доворота тела
-max_right_torso_angle			= 30 ; максимальный угол поворота направо без доворота тела
+max_left_torso_angle			= 45 ; пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ
+max_right_torso_angle			= 30 ; пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ
 
 ;---WEAPON BONES------------------------------------------------------------------
 weapon_bone0					= bip01_r_finger1
@@ -507,7 +507,7 @@ ph_collision_damage_factor	= 0.1
 ph_mass 				 		= 80
 
 ;---------------------------------------------------------------------
-ph_character_have_wounded_state = true; имеет ли персонаж состояние раненый
+ph_character_have_wounded_state = true; пїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ
 ;----------------------------------------------------------------------
 
 [stalker_trader]:stalker
@@ -520,7 +520,7 @@ $spawn							= "stalkers\stalker_sakharov"
 immunities_sect					= stalker_immunities_sakharov
 
 [stalker_immunities_sakharov]
-burn_immunity 				= 0.0				;коэффициенты иммунитета 
+burn_immunity 				= 0.0				;пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ 
 strike_immunity 			= 0.0
 shock_immunity 				= 0.0
 wound_immunity				= 0.0
